Ensure only postgis extension is installed (#11)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
     ports:
       - "0.0.0.0:${OSM_PG_FEATURESERV_DB_SYSTEM_PORT}:5432"
     volumes:
+      - ./postgres/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
       - osm_pg_featureserv_db_data:/var/lib/postgresql/data
       - ./data:/data
     environment:
